fix: kinda fix grid size on smaller screens

--- a/src/components/Node/Node.css
+++ b/src/components/Node/Node.css
@@ -1,5 +1,5 @@
 .node {
-    border: 1px solid grey;
+    border: 0.5px solid grey;
     box-sizing: border-box;
     margin: 0 -1px -1px 0;
     user-select: none;
@@ -58,10 +58,11 @@
     }
 }
 
-@media (min-width: 1025px) {
+@media (min-width: 1281px) {
     .node {
         height: 25px;
         width: 25px;
+        border: 1px solid grey;
     }
 }
 
